--- a/6장/6-2_PCA.ipynb
+++ b/6장/6-2_PCA.ipynb
@@ -501,7 +501,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_excel('credit_card.xls', sheet_name='Data')\n",
+    "df = pd.read_excel('credit_card.xls', header=1, sheet_name='Data').iloc[0:,1:]\n",
     "print(df.shape)\n",
     "df.head(3)"
    ]
