--- a/7장/7-1_KMeans.ipynb
+++ b/7장/7-1_KMeans.ipynb
@@ -131,6 +131,7 @@
    ],
    "source": [
     "irisDF['target'] = iris.target\n",
+    "irisDF['cluster']=kmeans.labels_\n",
     "iris_result = irisDF.groupby(['target','cluster'])['sepal_length'].count()\n",
     "print(iris_result)"
    ]
