Update 8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb

--- a/8장/8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb
+++ b/8장/8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb
@@ -30,6 +30,10 @@
    ],
    "source": [
     "from nltk import sent_tokenize\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "\n",
     "text_sample = 'The Matrix is everywhere its all around us, here even in this room. \\\n",
     "               You can see it out your window or on your television. \\\n",
     "               You feel it when you go to work, or go to church or pay your taxes.'\n",
