Update 8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb

--- a/8장/8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb
+++ b/8장/8.2 텍스트 사전 준비 작업(텍스트 전처리) - 텍스트 정규화_8.3 Bag of Words _ BOW.ipynb
@@ -217,6 +217,9 @@
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
     "\n",
+    "import nltk\n",
+    "nltk.download('wordnet')\n",
+    "\n",
     "lemma = WordNetLemmatizer()\n",
     "print(lemma.lemmatize('amusing','v'),lemma.lemmatize('amuses','v'),lemma.lemmatize('amused','v'))\n",
     "print(lemma.lemmatize('happier','a'),lemma.lemmatize('happiest','a'))\n",
